collections and access rights added and completed

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts nodemon",
+    "generate:types": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:types",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -19,6 +20,12 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@tabler/icons-react": "^3.6.0",
+    "@tanstack/react-query": "^5.49.2",
+    "@trpc/client": "^11.0.0-rc.433",
+    "@trpc/next": "^11.0.0-rc.433",
+    "@trpc/react-query": "^11.0.0-rc.433",
+    "@trpc/server": "^11.0.0-rc.433",
+    "@types/nodemailer": "^6.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
@@ -27,11 +34,13 @@
     "lucide-react": "^0.394.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
     "payload": "^2.22.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
+    "react-query": "^3.39.3",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
